# deepcoder

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
deepcoder/: context.py  converter.py  datagen.py  search.py  util.py
deepcoder/dsl/: constants.py  constraint.py  function.py  impl.py  program.py  types.py  value.py  variable.py
deepcoder/nn/: encoding.py  model.py
deepcoder/scripts/: gen-dataset.py  gen-datasets.sh  gen-examples.py  gen-programs.py  solve-examples.py  solve-problems.py  train-nn.py
experiments/: baselines.sh
scripts/: gen-datasets.sh  gen-problems.py  train-nn.py
test/: test_constraint.py  test_context.py  test_dsl.py  test_program.py  test_search.py
